--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <head>
     <title>Sign In</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="assets/cstrike.ico" type="image/x-icon">
 </head>
-<div id="shopify-section-websitebg" class="shopify-section">
+
 <div class="bgimg"></div>
-  
-</div>
-<div id="shopify-section-running-text" class="shopify-section">
-    
+
 <section class="running-text" style="background-color: #000000; color: #ffffff">
   <div class="running-text-container">
-    <span class="running-text-content">this is pretty much a mystery box site!</span>
-  </div>
+    <span class="running-text-content">this is pretty much a send me location!</span>
 </section>
 
 <body>
