--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <div class="bgimg"></div>
 <div id="running-text-wrapper">
   <section class="running-text" style="background-color: #000000; color: #ffffff">
-    <div class="running-text-container" id="runningTextContainer">  <span class="running-text-content">this is pretty much a mystery box site!</span> </div>
+    <div class="running-text-container" id="runningTextContainer">  <span class="running-text-content">turn on audio!</span> </div>
   </section>
 </div>
 <script>
