--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     </section>
 </div>
 
+<audio id="headshot-sound" src="/assets/sound/player/headshot1.wav"></audio>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var audio = document.getElementById("headshot-sound");
+
+        window.addEventListener("click", function () {
+            console.log("Click event triggered"); // Debugging
+
+            if (!audio.paused) {
+                audio.currentTime = 0; // Restart only if already playing
+            } else {
+                audio.play().catch(error => console.error("Playback failed:", error));
+            }
+        });
+    });
+</script>
+
 <body>
 
     <div class="container">
